--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: CICD
 
 env:
-  PYTHON_VERSION: 3.10
+  PYTHON_VERSION: '3.10.14'
   HF_TOKEN: ${{secrets.HUGGINGFACE_ACCESS_TOKEN}}
   HF_USERNAME: stestoni91
   HF_SPACE: text-summarization
