--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install python
       uses: actions/setup-python@v1
       with:
-        python-version: $PYTHON_VERSION
+        python-version: 3.10.14
     - name: Install dependencies
       run: pip install -r requirements.txt
     - name: Run tests
