--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ pydantic_core==2.18.4
 pydub==0.25.1
 Pygments==2.18.0
 pyparsing==3.1.2
+pytest==8.2.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
