--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,5 @@
 name: CICD
 
-env:
-  HF_TOKEN: ${{secrets.HUGGINGFACE_ACCESS_TOKEN}}
-  HF_USERNAME: stestoni91
-  HF_SPACE: text-summarization
-
 on:
   push:
     branches: [main]
@@ -30,13 +25,13 @@ jobs:
       uses: actions/checkout@v4
     - name: Synch GitHub and HF
       env:
-        HF_TOKEN: ${{secrets.HUGGINGFACE_ACCESS_TOKEN}}
+        HF_TOKEN: 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
         HF_USERNAME: stestoni91
-        HF_SPACE: text-summarization
+        HF_SPACE: text-summary-app
       run: git remote add space https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$HF_SPACE
     - name: Deploy app
       env:
-        HF_TOKEN: ${{secrets.HUGGINGFACE_ACCESS_TOKEN}}
+        HF_TOKEN: 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
         HF_USERNAME: stestoni91
-        HF_SPACE: text-summarization
+        HF_SPACE: text-summary-app
       run: git push --force https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$HF_SPACE
